--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 8000
 
-MONGO_URI =mongodb+srv://sahilkhatiwada:sahilkhatiwada12@cluster0.nawyyok.mongodb.net/LearningManagement?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URl =mongodb+srv://sahilkhatiwada:sahilkhatiwada12@cluster0.nawyyok.mongodb.net/LearningManagement?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET_KEY = 4XO0uRWy9EndPs1bq
